src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Avis_courriel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indiquer ici si on ne doit pas envoyer un avis courriel de masse</description>
        <inlineHelpText>coché coché cette case si on ne désire pas envoyer de courriel de masse pour la collection des factures</inlineHelpText>
        <label>Pas d&apos;avis courriel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_de_la_facture__c</fullName>
        <label>Date de la facture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delais_de_paiement__c</fullName>
        <formula>TODAY()  -   Date_de_la_facture__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Délais de paiement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dossier_CEP__c</fullName>
        <label>Dossier CEP</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_Client__c</fullName>
        <description>Le numéro de dossier du client</description>
        <label>Dossier Client</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facture_CEP__c</fullName>
        <description>Numéro de facrture / Invoice Number</description>
        <label>Facture CEP</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fil_de_requete__c</fullName>
        <formula>&quot;ref:00D&quot;&amp;MID(Id,4,1)&amp;RIGHT($Organization.Id, 4) &amp;&quot;.&quot;&amp; LEFT(Id,4)&amp;RIGHT(Id,5) &amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fil de requete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGD__Collection_Id__c</fullName>
        <label>Collection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police__c</fullName>
        <description>Inscrire le numo de la police d&apos;assurance</description>
        <label>#Police</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_dossier__c</fullName>
        <label>Référence dossier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solde__c</fullName>
        <label>Solde</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ThreadId__c</fullName>
        <formula>LEFT( $Organization.Id , 4)  &amp; IF (MID ( $Organization.Id, 5, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 11), IF (MID ( $Organization.Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 10), IF (MID ( $Organization.Id, 7, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 9), IF (MID ( $Organization.Id, 8, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 8), IF (MID ( $Organization.Id, 9, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 7), IF (MID ( $Organization.Id, 10, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 6), IF (MID ( $Organization.Id, 11, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 5), IF (MID ( $Organization.Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 4), IF (MID ( $Organization.Id, 13, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 3), IF (MID ( $Organization.Id, 14, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 2), &quot;&quot;) ) ) ) ) ) ) ) ) ) &amp; &quot;.&quot;  &amp; LEFT( Id, 4) &amp; IF (MID ( Id, 5, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 11), IF (MID ( Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 10), IF (MID ( Id, 7, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 9), IF (MID ( Id, 8, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 8), IF (MID ( Id, 9, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 7), IF (MID ( Id, 10, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 6), IF (MID ( Id, 11, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 5), IF (MID ( Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 4), IF (MID ( Id, 13, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 3), IF (MID ( Id, 14, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 2), &quot;&quot;) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ThreadId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_de_la_facture__c</fullName>
        <label>Total de la facture</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>responsable_du_dossier__c</fullName>
        <label>Responsable du dossier</label>
        <picklist>
            <picklistValues>
                <fullName>Beaucage-Gauvreau E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolduc LS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouchard P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourbeau C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourgeois F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caron C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaine E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courcelles PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortier P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortin R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fournier M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulcher M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gagnon F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gauthier K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gibson D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helliker A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hobbs K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houde N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joubert JF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joubert LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labonté S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Langlois A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leblanc C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lefrançois C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massicotte P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millette S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morrissette M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murray I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilon M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provencher A</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>specificite_de_la_requete__c</fullName>
        <label>Spécificité de la requête</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Collection 120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection 150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection 180+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Détails de la facture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Toutes les requêtes en cours</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Mes requêtes en cours</label>
    </listViews>
    <listViews>
        <fullName>collection</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>responsable_du_dossier__c</columns>
        <columns>Solde__c</columns>
        <columns>Delais_de_paiement__c</columns>
        <columns>Date_de_la_facture__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>Dossier_CEP__c</columns>
        <columns>Reference_dossier__c</columns>
        <columns>Facture_CEP__c</columns>
        <columns>Dossier_Client__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Fermé</value>
        </filters>
        <filters>
            <field>specificite_de_la_requete__c</field>
            <operation>contains</operation>
            <value>Collection</value>
        </filters>
        <label>collection</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>collection_120_180</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>responsable_du_dossier__c</columns>
        <columns>Solde__c</columns>
        <columns>Delais_de_paiement__c</columns>
        <columns>Date_de_la_facture__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>Dossier_CEP__c</columns>
        <columns>Reference_dossier__c</columns>
        <columns>Facture_CEP__c</columns>
        <columns>Dossier_Client__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Fermé</value>
        </filters>
        <filters>
            <field>Delais_de_paiement__c</field>
            <operation>greaterOrEqual</operation>
            <value>120</value>
        </filters>
        <filters>
            <field>Delais_de_paiement__c</field>
            <operation>lessThan</operation>
            <value>180</value>
        </filters>
        <label>collection 120-180</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>collection_150</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>responsable_du_dossier__c</columns>
        <columns>Solde__c</columns>
        <columns>Delais_de_paiement__c</columns>
        <columns>Date_de_la_facture__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>Dossier_CEP__c</columns>
        <columns>Reference_dossier__c</columns>
        <columns>Facture_CEP__c</columns>
        <columns>Dossier_Client__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Delais_de_paiement__c</field>
            <operation>greaterThan</operation>
            <value>150</value>
        </filters>
        <label>collection 150</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>collection_180</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>responsable_du_dossier__c</columns>
        <columns>Solde__c</columns>
        <columns>Dossier_CEP__c</columns>
        <columns>Delais_de_paiement__c</columns>
        <columns>Reference_dossier__c</columns>
        <columns>NAME</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Facture_CEP__c</columns>
        <columns>Dossier_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Fermé</value>
        </filters>
        <filters>
            <field>Delais_de_paiement__c</field>
            <operation>greaterThan</operation>
            <value>180</value>
        </filters>
        <label>collection 180+</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>collection_fermee</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>,Fermé,Closed</value>
        </filters>
        <filters>
            <field>specificite_de_la_requete__c</field>
            <operation>equals</operation>
            <value>Collection</value>
        </filters>
        <label>collection fermée</label>
        <language>fr</language>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>